--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  </head>
-  <body>
-    123
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>话术推荐系统</title><script src="config.js"></script><script defer="defer" src="js/chunk-vendors.b2f270ae.js"></script><script defer="defer" src="js/app.c5b0a4dd.js"></script><link href="css/chunk-vendors.147cf408.css" rel="stylesheet"><link href="css/app.9aa2753c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but 话术推荐系统 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
